--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+  <div id="app">
+    <main>
+      <div class="main-contende">main</div>
+    </main>
+    <aside>
+      <div class="aside-contende">aside</div>
+    </aside>
+  </div>
   
 </body>
 </html>
