estruturando input radio

--- a/index.html
+++ b/index.html
@@ -112,13 +112,33 @@
           </div>
           <div class="input-wrapper">
             <label for="info-email">E-mail</label>
-            <input type="email" name="info-email" id="info-email" placeholder="papailegal123" required>
+            <input type="email" name="info-email" id="info-email" placeholder="papailegal123" required >
             <div class="erro">
               <img src="assets/icones/alert-circle.svg" alt="img de erro">
               <span>Insira um e-mail válido</span>
             </div>
           </div>
 
+        </fieldset>
+        <fieldset class="turno">
+          <legend>Opções de matrícula</legend>
+          <label >Selecione o turno de estudo</label>
+          <div class="radio-wrapper">
+            <div class="radio-interno">
+              <div class="radio-img"></div>
+              <input type="radio" name="morning" id="morning">
+              <img src="assets/icones/sun-cloud-02.png" alt="">
+              <label for="morning">Manhã</label>
+            </div>
+          </div>
+          <div class="radio-wrapper">
+            <div class="radio-interno">
+              <div class="radio-img"></div>
+              <input type="radio" name="afternoon" id="afternoon">
+              <img src="assets/icones/sun-02.png" alt="">
+              <label for="afternoon">Tarde</label>
+            </div>
+          </div>
         </fieldset>
 
 
