--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
         <fieldset class="turno">
           <legend>Opções de matrícula</legend>
           <label >Selecione o turno de estudo</label>
+          
           <div class="radio-wrapper">
             <div class="radio-interno">
               <div class="radio-img"></div>
-              <input type="radio" name="morning" id="morning">
-              <img src="assets/icones/sun-cloud-02.png" alt="">
+              <input type="radio" name="turno" id="morning">
+              <img src="assets/icones/sun-cloud-02.png" alt="icone de nuvem">
               <label for="morning">Manhã</label>
             </div>
-          </div>
-          <div class="radio-wrapper">
+          
             <div class="radio-interno">
               <div class="radio-img"></div>
-              <input type="radio" name="afternoon" id="afternoon">
-              <img src="assets/icones/sun-02.png" alt="">
+              <input type="radio" name="turno" id="afternoon">
+              <img src="assets/icones/sun-02.png" alt="icone de sol">
               <label for="afternoon">Tarde</label>
             </div>
-          </div>
+          </div><!-- radio-wrapper -->
         </fieldset>
 
 
