--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
 
 
         </fieldset>
+        <div class="termo-wrapper checkbox-wrapper input-wrapper">
+          <div class="checkbox-img"></div>
+          <input type="checkbox" id="termo" name="termo">
+          <label for="termo">Declaro que li e concordo com os <strong>Termos e Condições </strong> e com a <strong> Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
+        </div>
+        
+
 
 
 
