--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
           <input type="checkbox" id="termo" name="termo">
           <label for="termo">Declaro que li e concordo com os <strong>Termos e Condições </strong> e com a <strong> Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
         </div>
+        <div class="action-wrapper">
+          <button type="button" class="btn-primary">Salvar respostas</button>
+          <button class="btn-segundary">Fazer matrícula</button>
+        </div>
+        
         
 
 
